<resources>
    <string name="app_name">Quiz Droid</string>
    <string name="quiz_title_placeholder">Quiz Title</string>
    <string-array name="quiz_titles">
        <item>Math</item>
        <item>Physics</item>
        <item>Marvel Super Heroes</item>
    </string-array>
    <string name="marvel_description">This is a basic description for Marvel Super Hero questions. You will be asked to answer questions about marvel super heroes.</string>
    <string name="math_description">This is a basic description for math questions. You will be asked to answer questions about math</string>
    <string name="physics_description">This is a basic description for physics questions. You will be asked to answer questions about physics</string>
    <string name="begin_quiz">Begin</string>
    <string name="questions">2 Questions</string>
    <string name="math_question_1">Math Question 1</string>
    <string name="physics_question_1">Physics Question 1</string>
    <string name="marvel_question_1">Marvel Question 1</string>
    <string name="next">Next</string>
    <string name="spiderman">Spiderman</string>
    <string name="batman">Batman</string>
    <string name="he_man">He-Man</string>
    <string name="ninjas">Ninjas</string>
    <string name="tree">Tree</string>
    <string name="algebra">Algebra</string>
    <string name="earth">Earth</string>
    <string name="boom">Boom</string>
    <string name="gravity">Gravity</string>
    <string name="python">Python</string>
    <string name="verb">Verb</string>
    <string name="bacteria">Bacteria</string>
    <string name="submit">Submit</string>
    <string name="physics_question_2">Physics Question 2</string>
    <string name="marvel_question_2">Marvel Question 2</string>
    <string name="math_question_2">Math Question 2</string>
    <string name="finish">Finish</string>
    <string name="marvel_answer_1">The correct answer: Spiderman</string>
    <string name="marvel_answer_2">The current answer: Spiderman</string>
    <string name="physics_answer_1">The current answer: Gravity</string>
    <string name="physics_answer_2">The current answer: Gravity</string>
    <string name="math_answer_1">The current answer: Algebra</string>
    <string name="math_answer_2">The current answer: Algebra</string>
    <string name="answered">Your answer: %s</string>
    <string name="correct">%d out of %d correct</string>
    <string name="math">Math</string>
    <string name="physics">Physics</string>
    <string name="marvel_super_heroes">Marvel Super Heroes</string>
</resources>