<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/math_question_1"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton android:id="@+id/radio_tree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tree"/>
            <RadioButton android:id="@+id/radio_algebra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/algebra"/>
            <RadioButton android:id="@+id/radio_earth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/earth"/>
            <RadioButton android:id="@+id/radio_boom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boom"/>
        </RadioGroup>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:enabled="false"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>