<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".questions.MathActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/mathTextView"
            android:layout_margin="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/math_description" />

        <TextView
            android:id="@+id/questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questions" />

        <Button
            android:id="@+id/beginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/begin_quiz" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>